# wallet

./: .dockerignore  .gitignore  .gitmodules  AGENT.md  CHANGELOG.md  CNAME  Cargo.toml  Cross.toml  DEV.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  connection_error_analysis.md  dprint.json  justfile  latest_branch_changes_summary.md  net.unstoppableswap.gui.flatpakref  rust-toolchain.toml  summary  summary.idx  summary.idx.sig  summary.sig  test-failure-analysis.md  unstoppableswap.flatpakrepo  unstoppableswap_recent_changes_report.md
.cargo/: config.toml
.github/workflows/: build-gui-preview-release-binaries.yml  build-gui-release-binaries-cb.yml  build-gui-release-binaries.yml  build-release-binaries.yml  ci.yml  draft-new-release.yml
bitcoin-harness/: CHANGELOG.md  Cargo.toml  README.md
bitcoin-harness/src/: bitcoind_rpc.rs  bitcoind_rpc_api.rs  lib.rs  wallet.rs
delta-indexes/60/: Xh2JHhHdAcByttCxOlygrqiNhabOFAtcuwMUpOIAY.index
delta-indexes/Ah/: X2VvbIWLWBI84eo5FPvI1j9GKUvrEEzJLeeuAZPi8.index
delta-indexes/zy/: ndZe8W_P9JmIp3WuxPspvNRQSBi726u9f9EgIAN44.index
dev-docs/: README.md  monero_manual_redeem.md
dev-docs/asb/: README.md
dev_scripts/: test_monero_rpc_pool.sh
docs/pages/: send_feedback.mdx
flatpak/: net.unstoppableswap.gui.json  net.unstoppableswap.gui.yml
monero-harness/: Cargo.toml
monero-harness/src/: image.rs  lib.rs
monero-harness/tests/: monerod.rs  wallet.rs
monero-native/: Cargo.toml  README.md  build.rs  moneroc
monero-native/examples/: basic.rs
monero-native/libs/: libmonero_libwallet2_api_c.dylib
monero-native/scripts/: extract_from_build_from_source.sh
monero-native/src/: bindings.rs  lib.rs
monero-native/tests/: integration_tests.rs
monero-rpc-pool/: Cargo.toml
monero-rpc-pool/.sqlx/: query-1766f6ee1f0d61c8eaadfc7e208181b24c04cc911407fb64e04a1e74e304c3dc.json  query-340255b201ff024dfabb719fad11a7d4138d85a626390eb596dc59dd7fff1b3b.json  query-44ddff5bdf5b56e9c1a9848641181de4441c8974b2d1304804874cf620420ad4.json  query-549f5ef13ec7bf5d987dcb893753a9c903edcafa3a66bd82965b40a9e7f238b6.json  query-5a25c95c04b11a60a04ad97b5fb684e9a0cc2eb5daf64f33e924f0c38a2edfec.json  query-5ff27bdd9b6e7aadc8dd4936e0ee7e6a611aaef28697a0e9535dfb30d1c4861d.json  query-7bc8d637e7cf020bff58d05109ae88e56672e95e0e638af99e82df5b00595e77.json  query-a032eb9773d4553aeaff4fb15ed99dbaef7d16d48750ee7bd4ab83233a9a732b.json  query-ba231efaf208a42fa857f716ef296b428c937f2eb7c8ce9c631f7f721e914c14.json  query-bd18b4afdd15b050a50be2572f022ab4843601ffa0122f496f06ecd98ca97f57.json  query-fac12e3ca6ac1db1a4812a5390a333ec95a2e5e2cd554c169ceecc61b7ff2864.json
monero-rpc-pool/migrations/: 20250618212026_initial_schema.sql
monero-rpc-pool/src/: config.rs  database.rs  discovery.rs  lib.rs  main.rs  pool.rs  proxy.rs  simple_handlers.rs  smart_pool.rs  types.rs
monero-rpc/src/: monerod.rs
monero-sys/: CLAUDE.md  Cargo.toml  README.md  build.rs  monero  vcpkg-configuration.json
monero-sys/patches/: wallet2_3min_remote_rpc_node_timeout.patch  wallet2_api_allow_subtract_from_fee.patch
monero-sys/src/: bridge.h  bridge.rs  lib.rs
monero-sys/tests/: harness_test.rs  simple.rs  wallet_closing.rs
src-gui/: .env.development  .gitignore  README.md  eslint.config.js  index.html  package.json  vite.config.ts
src-gui/src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
summaries/: 0fc07347561520ba48742fa815ecbccb3152b800ac3a97fc4a66c72d2510c985-01913ae584984e6bfb1e4ad358966d10c000198d236d30cc0c201b31016c9dfa.delta  abba192d529e1925d9f8059deacf7ad6d0b9c1d836eee8be1c30bdac43335263-01913ae584984e6bfb1e4ad358966d10c000198d236d30cc0c201b31016c9dfa.delta
swap/: Cargo.toml  tempdb
swap/.sqlx/: query-038d6f5d8434eb8be974e0c2cf655e84afc5d95859cf4c04770e629697782816.json  query-1ab9808882dc835b4456e566e49d22d3c8d8262efc6c51abbca29e4368e4f0d5.json  query-dff8b986c3dde27b8121775e48a58564fa346b038866699210a63f8a33b03f0b.json
swap/migrations/: 20250419201453_create_watchtower_swap_mapping_table.sql  20250527073755_transfer_proof_in_later_states.sql
swap/src/: api.rs  bitcoin.rs  cli.rs  env.rs  kraken.rs  monero.rs  network.rs  protocol.rs  seed.rs
swap/tests/: alice_and_bob_refund_using_cancel_and_refund_command.rs  alice_and_bob_refund_using_cancel_and_refund_command_timelock_not_expired.rs  alice_and_bob_refund_using_cancel_then_refund_command.rs  alice_broken_wallet_rpc_after_started_btc_early_refund.rs  alice_empty_balance_after_started_btc_early_refund.rs  alice_manually_punishes_after_bob_dead_and_bob_cancels.rs  (+3 more)
(+308 files in other folders)
