[package]
name = "monero-native"
version = "0.0.1"
edition = "2021"
description = "monero_c Rust bindings."
repository = "https://github.com/MrCyjaneK/monero_c"
license = "MIT"
build = "build.rs"

[lib]
name = "monero_c_rust"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
mockall = "0.13.0"
rust_decimal = "1.36.0"
serde = "1.0.217"
tempfile = "3.13.0"
thiserror = "2.0.9"
monero = { version = "0.12", features = [ "serde_support" ] }

[build-dependencies]
bindgen = "0.70.1"

